<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f8ff"
    tools:context=".about_us"
    android:orientation="vertical"


    >
    <ImageView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="16dp"
        android:id="@+id/back_button"
        android:padding="5dp"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        android:background="@drawable/back"
        />
    <TextView
        android:layout_marginTop="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="The Background"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/ssonline"
        />

    <TextView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background"
        android:justificationMode="inter_word"
        android:textSize="16sp"/>

    <TextView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:id="@+id/mission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mission:"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/ssonline"
        />

    <TextView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mission"
        android:justificationMode="inter_word"
        android:textSize="16sp"/>
    <TextView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vision:"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/ssonline"
        />
    <TextView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vision"
        android:justificationMode="inter_word"
        android:textSize="16sp"/>


</LinearLayout>