<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Guide"
    android:orientation="vertical">


            <ImageView
                android:id="@+id/back_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/back"
                android:padding="5dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/pack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/back_button"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppins_bold"
        android:text="Guide Book"
        android:textColor="@color/ssonline"
        android:textSize="32sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/elvMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="0dp"
                android:onClick="card1"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="রাউটারের কার্যপ্রনালি"
                        android:layout_gravity="center"
                        android:textColor="@color/ssonline"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/whats_router"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/whats_router"
                        android:textSize="18sp"
                        android:visibility="gone" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/elvMobile2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="0dp"
                android:onClick="card2"
                app:cardCornerRadius="20dp"
                app:cardElevation="10dp"
                app:contentPadding="10dp">

                <LinearLayout
                    android:layout_gravity="center"
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="দ্রুত গতির ওয়াইফাই"
                        android:textColor="@color/ssonline"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/better_speed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/better_speed"
                        android:textSize="18sp"
                        android:visibility="gone" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/elvMobile3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="0dp"
        android:onClick="card3"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="10dp"
        tools:ignore="OnClick">

        <LinearLayout
            android:layout_gravity="center"
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="tp-link কনফিগারেশন"
                android:textColor="@color/ssonline"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tp_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tp_link"
                android:textSize="18sp"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        android:id="@+id/elvMobile4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:onClick="card4"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:contentPadding="10dp"
        tools:ignore="OnClick">

        <LinearLayout
            android:layout_gravity="center"
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="Tenda কনফিগারেশন"
                android:textColor="@color/ssonline"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tenda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tenda"
                android:textSize="18sp"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>



</LinearLayout>